--- a/app/views/function_user_projects/edit.html.erb
+++ b/app/views/function_user_projects/edit.html.erb
@@ -1,12 +1,9 @@
-<p></p>
-
+<br />
 <div class="container">
   <div class="ui menu">
-    <a href="#" class="item active"><strong>Editando membro</strong></a>
+    <h2>Editando membro</h2>
   </div>
 
   <%= render 'form' %>
-     <br />
-    <%= link_to 'Salvar', '#', class: 'item save ui blue button' %>
-    <%= link_to 'Cancelar', function_user_projects_path, class: 'item ui red button' %>
+   
 </div>
