--- a/app/views/function_user_projects/show.html.erb
+++ b/app/views/function_user_projects/show.html.erb
@@ -1,11 +1,10 @@
-<p></p>
+
 
 <div class="container">
   <div class="ui menu">
-    <a href="#" class="item active"><strong>Membro</strong></a>
-    <%= link_to 'Novo', new_function_user_project_path, class: 'item' %>
-    <%= link_to 'Editar', edit_function_user_project_path(@function_user_project), class: 'item' %>
-    <%= link_to 'Voltar', function_user_projects_path, class: 'item' %>
+    <h2>Membro</h2>
+    <%= link_to 'Editar', edit_function_user_project_path(@function_user_project), class: 'item blue_button' %>
+    <%= link_to 'Voltar', function_user_projects_path, class: 'item red_button' %>
   </div>
 
     <p>
