--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
     <meta charset="UTF-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1">	
 	  <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-   
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
    </head>
 <body>
 
@@ -34,17 +36,5 @@
 
 </body>
 </html>
+    
 
-<script>
-$(document).ready(function() {
-    // create sidebar and attach to menu open
-    $('.ui.sidebar').sidebar('attach events', '.toc.item');
-    $('.ui.dropdown').dropdown();
-    $('.message .close').on('click', function() {
-      $(this)
-        .closest('.message')
-        .transition('fade');
-    });
-
-  }); 
-</script>
