--- a/app/views/themes/edit.html.erb
+++ b/app/views/themes/edit.html.erb
@@ -2,11 +2,9 @@
 
 <div class="container">
   <div class="ui menu">
-    <a href="#" class="item active"><strong>Editando tema</strong></a>
+    <h2>Editando tema</h2>
   </div>
 
   <%= render 'form' %>
-  <br />
-     <%= link_to 'Salvar', class: 'item save ui blue button' %>
-    <%= link_to 'Cancelar', themes_path, class: 'item ui red button' %>
+ 
 </div>
