--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="ui menu">
-    <a href="#" class="item active"><strong>Theme</strong></a>
+    <h2>Tema</h2>
     <%= link_to 'Novo', new_theme_path, class: 'item' %>
     <%= link_to 'Editar', edit_theme_path(@theme), class: 'item' %>
     <%= link_to 'Voltar', themes_path, class: 'item' %>
