--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,60 +1,27 @@
-<link rel="stylesheet" href="//code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="/resources/demos/style.css">   
-<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
 
-<%= form_for(@project, html: {class: 'form'}) do |f| %>
-    <% if @project.errors.any? %>
-        <div class="alert_danger">
-           <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-              <div class="header">
-            <% @project.errors.full_messages.each do |message| %>
-                <p> - <%= message %> </p>
-            <% end %>
-          </div>
-          </div>
-    <% end%>
+<script src="https://cdn.tiny.cloud/1/1gti6vv8xhfz31p7cvmfjste6wojlysx8ebudo4umd24bd0x/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+<script>
+$( function initPage() {
+    tinymce.init({
+        selector: '#tinymce',
+        height: 500,
+        width: 600,
+        menubar: false,
+        plugins: [
+          'advlist autolink lists link image charmap print preview anchor',
+          'searchreplace visualblocks code fullscreen',
+          'insertdatetime media table paste code help wordcount'
+        ],
+          toolbar: 'undo redo | formatselect | ' +
+          ' bold italic backcolor | alignleft aligncenter ' +
+          ' alignright alignjustify | bullist numlist outdent indent | ' +
+          ' removeformat | help'
+      });
+});
+</script>
 
-  <div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-
-  <div>
-    <%= f.label :initial %>
-    <%= f.text_field :initial, maxlength: 6 %>
-  </div>
-
-  <div>
-    <%= f.label :description %>
-    <%= f.rich_text_area :description %>
-  </div>
-  
-  <div class="inline field"><label>Duração</label></div>
-  <div class="inline fields">
-    <div class="ui calendar">
-      <div class="ui input left icon">
-        
-        <%= f.text_field :start_date, placeholder: 'Data inicial', id: 'startDatepicker' %>
-      </div>
-    </div>
-    <p style="margin-right: 1em; margin-left: 1em">à</p>
-    
-        <%= f.text_field :end_date, placeholder: 'Data final', id: 'endDatepicker' %>
-    
-  </div>
-
-    <%= link_to 'Salvar', new_project_path({controller: 'projects', action: 'create' }), class: 'save blue_button' %>
-    <%= link_to 'Cancelar', projects_path, class: 'red_button' %>
-
-<% end %>
-
-<script type="text/javascript">
-  $('.save').click(function(){
-    $('form').submit(); 
-  });
-
-  $( function() {
+<script>
+$( function initPage() {
       $("#startDatepicker").datepicker({
        dateFormat: 'dd/mm/yy',
        dayNames: ['Domingo','Segunda','Terça','Quarta','Quinta','Sexta','Sábado'],
@@ -82,4 +49,53 @@
        minDate:new Date()
      });
   } );
+</script>
+
+<%= form_for(@project, html: {class: 'form'}) do |f| %>
+    <% if @project.errors.any? %>
+        <div class="alert_danger">
+           <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+              <div class="header">
+            <% @project.errors.full_messages.each do |message| %>
+                <p> - <%= message %> </p>
+            <% end %>
+          </div>
+          </div>
+    <% end%>
+
+  <div>
+    <b><%= f.label :name %></b>
+    <br />
+    <%= f.text_field :name %>
+  </div>
+
+   <div>
+    <b><%= f.label :initial %></b>
+    <br />
+    <%= f.text_field :initial, maxlength: 6 %>
+  </div>
+
+  <div>
+    <b><%= f.label :description %></b>
+    <br />
+    <%= f.text_area :description, id: "tinymce" %>
+  </div>
+  <br />
+  <div><b>Duração</b></div>
+  <div>
+        <%= f.text_field :start_date, placeholder: 'Data inicial', id: 'startDatepicker' %>
+        <p style="margin-right: 1em; margin-left: 1em">à</p>
+        <%= f.text_field :end_date, placeholder: 'Data final', id: 'endDatepicker' %>
+  </div>
+    <%= link_to 'Salvar', new_project_path({controller: 'projects', action: 'create' }), class: 'save blue_button' %>
+    <%= link_to 'Cancelar', projects_path, class: 'red_button' %>
+
+    <br />
+    <br />
+<% end %>
+
+<script type="text/javascript">
+  $('.save').click(function(){
+    $('form').submit(); 
+  });
 </script>
