--- a/app/views/releases/_form.html.erb
+++ b/app/views/releases/_form.html.erb
@@ -1,9 +1,10 @@
-<%= form_for(@release, html: {class: 'ui form'}) do |f| %>
+
+<%= form_for(@release, html: {class: 'form'}) do |f| %>
 
  <% if @release.errors.any? %>
-      <div class="container">
         <div class="alert_danger">
-           <div class="close icon">x</div>
+             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>     
+        
               <div class="header">
             <% @release.errors.full_messages.each do |message| %>
                 <p> - <%= message %> </p>
@@ -13,15 +14,19 @@
        <p></p>
   <% end%>
 
-    <div class="field">
-      <%= f.label :version %>
+    <div>
+      <b><%= f.label :version %></b>
+       <br />
     <%= f.text_field :version %>
     </div>
 
-    <div class="inline field">
-      <%= f.label :deliver_date %>
+    <div>
+      <b><%= f.label :deliver_date %></b>
+      <br />
     <%= f.date_select :deliver_date %>
     </div>
+       <%= link_to 'Salvar', new_release_path({ controller: 'releases', action: 'create' }), class: 'ui save blue_button' %>
+    <%= link_to 'Cancelar', releases_path, class: 'item ui red_button' %>
 
   <% end %>
 
@@ -30,5 +35,5 @@
     $('form').submit();
   });
 
-  $('.ui.search.dropdown').dropdown({ allowLabels:true});
+
 </script>
