--- a/app/views/releases/new.html.erb
+++ b/app/views/releases/new.html.erb
@@ -1,12 +1,10 @@
-<p></p>
- <%= render 'releases/breadcrumb' %>
- <br />
- <br />
-
+<br />
 <div class="container">
+  <h2>Nova release</h2>
 
+  <br />
+  
   <%= render 'form' %>
   <br />
-    <%= link_to 'Salvar', new_release_path({ controller: 'releases', action: 'create' }), class: 'ui blue button item save' %>
-    <%= link_to 'Cancelar', releases_path, class: 'item ui red button' %>
+ 
 </div>
