--- a/app/views/sprints/edit.html.erb
+++ b/app/views/sprints/edit.html.erb
@@ -1,12 +1,10 @@
-<p></p>
+<br />
 
 <div class="container">
   <div class="ui menu">
-    <a href="#" class="item active"><strong>Editando sprint</strong></a>
+    <h2>Editando sprint</h2>
   </div>
 
   <%= render 'form' %>
-  <br />
-    <%= link_to 'Salvar', '#', class: 'item save ui blue button' %>
-    <%= link_to 'Cancelar', sprints_path, class: 'item ui red button' %>
+
 </div>
