--- a/app/views/sprints/new.html.erb
+++ b/app/views/sprints/new.html.erb
@@ -1,14 +1,10 @@
-<p></p>
+<br />
 
 <div class="container">
   <div class="ui menu">
-    <a href="#" class="item active"><strong>Nova sprint</strong></a>
+    <h2>Nova sprint</h2>
   </div>
 
   <%= render 'form' %>
-  <br />
-    <%= link_to 'Salvar', new_sprint_path({ controller: 'sprint', action: 'create' }), class: 'item save ui blue button' %>
-    <%= link_to 'Cancelar', sprints_path, class: 'item ui red button' %>
-  <br />
-  <br />
+ 
 </div>
