--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <%= stylesheet_link_tag "login.css" %>SS
+        <%= stylesheet_link_tag "login.css" %>
         <title>Kronos - Agile Management</title>
       
     </head>
