--- a/app/views/projects/_list_projects_admin.html.erb
+++ b/app/views/projects/_list_projects_admin.html.erb
@@ -5,7 +5,7 @@
       <%= image_tag("project.png") %>
       <br />
       <br />
-      <p class="access_deny">Nenhum projeto criado. Clique em "Novo projeto" para iniciar um projeto.</p>
+      <p class="access_deny">Nenhum projeto criado. Clique em "Novo projeto".</p>
       <br />
       <%= link_to "Novo projeto", new_project_path, class: 'green_button' %>
     </div>
