--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -8,9 +8,163 @@
     position: relative;
     float: left;
     height: 80px;
-    margin-left: 25px;
+    margin-left: 15px;
     margin-bottom: 20px;
 }
+
+#menu {
+	background: rgb(100, 149, 237);
+	color: #FFF;
+	height: 75px;
+  border-radius: 0px;	
+}
+
+#menu ul, #menu li {
+	padding: 0;
+	list-style: none;
+
+}
+#menu ul {
+  width: 100%;
+}
+#menu li {
+  float: right;
+  margin-top: 15px;
+  margin-left:25px;
+  margin-right:25px;
+	display: inline;
+	position: relative;
+}
+#menu a {
+	display: block;
+	line-height: 45px;
+	padding: 0 14px;
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 16px;
+}
+#menu a.dropdown-arrow:after {
+	content: "\25BE";
+	margin-left: 5px;
+}
+#menu li a:hover {
+	color: #FFF;
+	background: rgb(87, 129, 207);
+}
+#menu input {
+	display: none;
+	margin: 0;
+	padding: 0;
+	height: 45px;
+	width: 100%;
+	opacity: 0;
+	cursor: pointer
+}
+#menu label {
+	display: none;
+	line-height: 45px;
+	text-align: center;
+	position: absolute;
+	left: 35px
+}
+#menu label:before {
+	font-size: 1.6em;
+	content: "\2261"; 
+	margin-left: 20px;
+}
+
+#menu ul.sub-menus{
+	height: auto;
+	overflow: hidden;
+	width: 270px;
+  padding: 15px;
+	background: rgb(100, 149, 237);
+	position: absolute;
+	z-index: 99;
+	display: none;
+  margin-left: -235px;
+}
+
+#menu ul.sub-menus li {
+	display: block;  
+	width: 100%;
+}
+
+#menu ul.sub-menus a {
+  margin-left: 20px;
+	color: #FFFFFF;
+	font-size: 16px;
+}
+
+#menu li:hover ul.sub-menus {
+	display: block
+}
+
+#menu ul.sub-menus a:hover{
+	background: #F2F2F2;
+	color: #444444;
+}
+
+@media only screen and (max-width: 800px){
+  #menu label{
+    float: left;
+    padding-right: 10px;
+    margin-left: 90%;
+  }
+
+	#menu {
+    position:relative;
+  }
+	#menu ul {
+    background: rgb(100, 149, 237);
+    position:absolute;
+    top:100%;
+    right:0;
+    left:0;
+    z-index:3;
+    height:auto;
+    display:none
+  }
+	#menu ul.sub-menus {
+    width:130%;
+    position:static;
+    background-color: rgb(70, 114, 196);
+  }
+	#menu ul.sub-menus a {
+    padding-left:190px;
+  }
+  #menu ul.sub-menus a:hover {
+    background-color: rgb(87, 145, 253);
+  }
+	#menu li {display:block;float:none;width:auto;}
+	#menu input, #menu label {position:absolute;top:0;left:0;display:block}
+	#menu input {z-index:4}
+	#menu input:checked + label {color:white}
+	#menu input:checked + label:before {content:"\00d7"}
+	#menu input:checked ~ ul {display:block}
+}
+
+@media only screen and (max-width: 640px){
+  #menu {
+    background: rgb(100, 149, 237);
+    color: #FFF;
+    width: 100%;
+    height: 75px;
+    border-radius: 0px;	
+  }
+
+  .sidebar{
+    display: none;
+  }
+
+  div .container{
+    margin-left: -80px;
+  }
+}
+
+
+
+
 
 /*****************************************/
 /*************** MENU NAV ****************/
@@ -126,6 +280,9 @@ div#notification_inactived {
     border-radius: 20px;
 }
 
+
+/*****************************************************************/
+/*****************************************************************/
 .sidebar nav {
     position: absolute;
     float: left;
@@ -276,7 +433,7 @@ div#notification_inactived {
     height: 30px;
     padding: 5px;
     border-radius: 5px;
-    border-width: thin;
+    z-index: -2;
 }
 
 .search_input:hover{
@@ -1088,38 +1245,40 @@ th {
        margin-right: 20px;
     }
 }
-
+/* 
 @media only screen and (max-width:480px){
+
+
     div#menu_left ul{
         position: absolute;
-        top: 75px;
-        right: 0px;
-        padding-top: 0 auto; 
-        padding: 0 auto;
-        margin: 0 auto;
-        background-color: rgb(100, 149, 237);  
+        float: left;
+        height: 100%;
+        width: 300px;
+        margin-top: 30px;
+        width: 150px;
+        padding-right: 20px;
+        background-color: #FFF;
     }
     
     div#menu_left li {
-        height: 50px;
-        padding: 19px; 
-        box-shadow: 5px 0 4px -4px rgb(204, 204, 204);
+        list-style-type: none;
+        padding: 0;   
     }
+
     div#menu_right ul{
         position: absolute;
-        top: 80px;
-        width: 227px;
-        right: 0px;
-        padding-top: 0 auto; 
-        padding: 0 auto;
-        margin: 0 auto;
+        float: left;
+        height: 100%;
+        width: 300px;
+        margin-top: 90px;
+        width: 150px;
+        padding-right: 20px;
         background-color: rgb(100, 149, 237);  
     }
 
     div#menu_right ul li{ 
-        list-style: none;
-        text-decoration: none;
-        display: block
+        list-style-type: none;
+        padding: 0;   
     }
 
     div ul#icon-menu-mobile{
@@ -1198,9 +1357,17 @@ th {
         color: rgb(19, 18, 18);
     }
 
-}
+} */
 
 @media only screen and (max-width:360px){
+
+    #menu label{
+      float: left;
+      padding-right: 10px;
+      margin-left: 285px;
+    
+    }
+
     .sidebar nav {
         display: none;
     }
@@ -1342,7 +1509,8 @@ th {
     }
     .container{
         width: 90%;
-        margin-left: 20px;
+        margin-right: 0px;
+        
     }
 
 
@@ -1407,3 +1575,6 @@ th {
     }
  }
 }
+
+
+  
