--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <title>Kronos - Agile Projects</title>
     <%= stylesheet_link_tag 'layout', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'responsive-nav', 'data-turbolinks-track' => true  %>
     <%= csrf_meta_tags %>
     <%= favicon_link_tag asset_path("favicon.ico") %>
     <meta charset="UTF-8">
@@ -15,6 +16,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    
    </head>
 <body>
 
